# course_work_5

./: .env.sample  .gitignore  Dockerfile  README.md  docker-compose.yml  index.html  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: settings.py  urls.py
habits/: manage.py  models.py  permissions.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
habits/habits/: asgi.py  settings.py  urls.py  wsgi.py
habits/migrations/: 0001_initial.py  0002_initial.py  0003_alter_habit_period.py  0004_alter_habit_user.py  0005_habit_last_reminder_alter_habit_period.py  0006_alter_habit_period.py
nginx/: Dockerfile
users/: models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_tg_chat_id.py
